feat: 新增计算逻辑

--- a/package.json
+++ b/package.json
@@ -1,22 +1,43 @@
 {
   "version": "0.0.0",
-  "main": "build/main.js",
+  "description": "house price computer tools",
+  "name": "house-computer-price",
+  "author": "zhongyao",
+  "main": "./build/main.js",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "serve": "vite preview",
-    "dev:electron": "npm run build && tsc -p tsconfig.electron.json && electron ./build/main.js"
+    "dev:electron": "npm run build && tsc -p tsconfig.electron.json && electron ./build/main.js",
+    "dist": "npm run build && electron-builder",
+    "dist:mac": "npm run build && electron-builder --mac",
+    "dist:linux": "npm run build && electron-builder --linux",
+    "dist:windows": "npm run build && electron-builder --windows",
+    "dist:all": "npm run build && electron-builder --mac --linux --windows"
   },
   "dependencies": {
-    "element-plus": "^1.0.2-beta.48",
+    "element-plus": "1.0.2-beta.40",
     "vue": "^3.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
     "electron": "^13.1.2",
+    "electron-builder": "^22.11.7",
     "typescript": "^4.3.2",
     "vite": "^2.3.7",
+    "vite-plugin-style-import": "^1.0.0",
     "vue-tsc": "^0.0.24"
+  },
+  "build": {
+    "appId": "com.zzy.www",
+    "directories": {
+      "output": "software"
+    },
+    "files": [
+      "build/**/*",
+      "dist/**/*",
+      "package.json"
+    ]
   }
 }
